# db-api

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
src/db_api/: db.py  dependencies.py  main.py
src/db_api/api/: crud_routes.py  transaction_routes.py
src/db_api/models/: item.py
src/db_api/schemas/: base.py  health_schema.py  item_schema.py  transaction_schema.py
tests/: test_app.py  test_crud.py  test_setup.py  test_transactions.py
